--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                             <!-- About Image Wrap Start -->
                             <div class="about-img-wrap">
                                 <div class="play-btn-02">
-                                    <a class="popup-video" href="https://www.youtube.com/watch?v=krDWc30PAGg"><i class="fas fa-play"></i></a>
+                                    <a class="popup-video" href="https://www.youtube.com/watch?v=p2crefj__mo"><i class="fas fa-play"></i></a>
                                 </div>
                                 <div class="about-img about-img-big">
                                     <img src="assets/images/photo_410x552.png" alt="">
@@ -1039,37 +1039,37 @@
                     <div class="row">
                         <div class="col-12 text-center">
                             <div class="footer-widget-about">
-                                <a class="footer-logo" href="index.html"><img src="assets/images/logo-white.png" alt="Logo"></a>
-                                <p>Accelerate innovation with world-class tech teams We’ll match<br> you to an entire remote team of incredible freelance talent.</p>
+                                <a class="footer-logo" href="index.html"><img src="assets/images/logo-footer.png" alt="Logo"></a>
+                                <!-- <p>Accelerate innovation with world-class tech teams We’ll match<br> you to an entire remote team of incredible freelance talent.</p> -->
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-lg-10 col-xl-8 mx-auto">
+                        <div class="col-12 mx-auto">
                             <div class="widget-info mt-2">
                                 <ul class="row">
-                                    <li class="col-12 col-md-4">
+                                    <li class="col-12 col-lg-4">
                                         <div class="info-text text-center w-100">
                                             <div class="info-icon d-inline">
                                                 <i class="flaticon-phone-call"></i>
                                             </div>
-                                            <span class="d-inline"><a href="#">+91 458 654 528</a></span>
+                                            <span class="d-inline">099 667 9379, 02 087 6542</span>
                                         </div>
                                     </li>
-                                    <li class="col-12 col-md-4">
+                                    <li class="col-12 col-lg-4">
                                         <div class="info-text text-center w-100">
                                             <div class="info-icon d-inline">
                                                 <i class="far fa-envelope-open"></i>
                                             </div>
-                                            <span><a href="#">info@example.com</a></span>
+                                            <span>info@natachat.com</span>
                                         </div>
                                     </li>
-                                    <li class="col-12 col-md-4">
+                                    <li class="col-12 col-lg-4">
                                         <div class="info-text text-center w-100">
                                             <div class="info-icon d-inline">
                                                 <i class="flaticon-pin"></i>
                                             </div>
-                                            <span>60 East 65th Street, NY</span>
+                                            <span>Ramintra 109 Legent Street London Prayasurhen Road. Bangkok</span>
                                         </div>
                                     </li>
                                 </ul>
